--- a/docs/grammar.tex
+++ b/docs/grammar.tex
@@ -99,6 +99,7 @@
         \langle int\_lit \rangle                              \\
         \langle ident \rangle                                 \\
         \_ [term] & \textbf{negative expression (underscore)} \\
+        ([expr])                                              \\
     \end{cases}                            \\
     [type]    & \to
     \begin{cases}
