--- a/docs/grammar.tex
+++ b/docs/grammar.tex
@@ -82,6 +82,7 @@
         [type] ~\langle ident \rangle = [expr]; & \textbf{variable assignment}   \\
         \langle ident \rangle = [expr];         & \textbf{variable reassignment} \\
         ret ~[expr];                            & \textbf{exit/return}           \\
+        if [expr] [scope]                                                        \\
         [scope]                                                                  \\
     \end{cases} \\
     % [asgn] & \to
