[Add] while + some cleanup

--- a/docs/grammar.tex
+++ b/docs/grammar.tex
@@ -83,6 +83,7 @@
         \langle ident \rangle = [expr];         & \textbf{variable reassignment} \\
         ret ~[expr];                            & \textbf{exit/return}           \\
         if [expr] [scope]                                                        \\
+        while [expr] [scope]                                                     \\
         [scope]                                                                  \\
     \end{cases} \\
     % [asgn] & \to
